[ci skip] random forest exercise code df77e1b1120d62a3f4f72e185a24579401ea0ea4

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "13c22ffa",
+   "id": "c01d6956",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "349cb7ce",
+   "id": "0a8ba20c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "253883c2",
+   "id": "ebba8acc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "402a788b",
+   "id": "f1656c43",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17617811",
+   "id": "d6a8a40a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369722ea",
+   "id": "1795b376",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38cacecb",
+   "id": "b8e9a177",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35748073",
+   "id": "c0cf0e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e9244e0",
+   "id": "67e6edc1",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "799522ca",
+   "id": "61b10455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb91676a",
+   "id": "ff69a69f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a219a06",
+   "id": "9c90535e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12fef2cd",
+   "id": "dc6c5e04",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1394c1",
+   "id": "c143246b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d3ca29",
+   "id": "3566fa52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7410b94e",
+   "id": "ec168a18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6f3384",
+   "id": "45ba6cc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b894d0d4",
+   "id": "2ff96359",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa1389b",
+   "id": "a337802a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f94f2a8",
+   "id": "07c31190",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20fb62b",
+   "id": "31012808",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72e9eab9",
+   "id": "359ec432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93e4549",
+   "id": "47d62737",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f18e2669",
+   "id": "24e4fcf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "618fdee2",
+   "id": "fb19de6d",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1a258a",
+   "id": "4ec1ce28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed46f8d",
+   "id": "04e27a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89bedc5",
+   "id": "0fa36469",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01cfbf1c",
+   "id": "97d48731",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0eded27",
+   "id": "a0a822b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8c489b",
+   "id": "4c79ae88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1dd197",
+   "id": "98dd57ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc610297",
+   "id": "0df9aac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae39f42",
+   "id": "aa2c847e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44152e3e",
+   "id": "09573761",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb732682",
+   "id": "847da4e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b92b38",
+   "id": "d0e19182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6c26c4b",
+   "id": "57ad2452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a9268e",
+   "id": "fd1d7c48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa7417a6",
+   "id": "5af4ea77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092ee156",
+   "id": "7f37bda6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d68f89e",
+   "id": "83f6b157",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a819da",
+   "id": "a699a640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcab9b80",
+   "id": "fbd9e8f5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1c746ac",
+   "id": "ac872dd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f93c800",
+   "id": "d212d4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5388c4c",
+   "id": "7595967e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d37dfa1d",
+   "id": "d9348919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f27dec25",
+   "id": "9d99cf09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f52e3c9",
+   "id": "b13b2285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbfb7aa4",
+   "id": "ecd01633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c900a51f",
+   "id": "863edcdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa4b5a6",
+   "id": "cc79ac78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0961f2f",
+   "id": "3e6221c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94871cbb",
+   "id": "6cc7b840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad6f5c52",
+   "id": "195f9aa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6bcff8",
+   "id": "02a4a81b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,33 +1515,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e982b51",
+   "id": "527f5c01",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "\n",
-    "model = MultiOutputRegressor(\n",
-    "    estimator=HistGradientBoostingRegressor(random_state=0), n_jobs=-1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43b09cf7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "multioutput_predictions = features_with_dropped_cols.skb.apply(\n",
-    "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
+    "    MultiOutputRegressor(\n",
+    "        estimator=HistGradientBoostingRegressor(random_state=0), n_jobs=-1\n",
+    "    ),\n",
+    "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
     ").skb.set_name(\"multioutput_gbdt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90986db2",
+   "id": "eff13236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16030379",
+   "id": "dc8727e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f582bb4",
+   "id": "bd59fe87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e2d519",
+   "id": "5c6664dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14034c3",
+   "id": "c41b456c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03ca4850",
+   "id": "b2c8a193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90b20d40",
+   "id": "31a9597a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eaa3fa7",
+   "id": "19417f03",
    "metadata": {},
    "outputs": [],
    "source": []
