--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66a55176",
+   "id": "9264e2b9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89898b51",
+   "id": "7eee81ec",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b96f623",
+   "id": "7dda1b73",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97796485",
+   "id": "c1ba1c1f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6221d445",
+   "id": "3833daa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e59c1425",
+   "id": "0e628b09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17138d8d",
+   "id": "79d56fcf",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff25d45",
+   "id": "56ba8415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124b587d",
+   "id": "26f584b0",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6225f1d0",
+   "id": "de34352d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abf845d",
+   "id": "5141a4ad",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c12ff8a",
+   "id": "793af7bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813cd5dd",
+   "id": "c20c6913",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64f7f28e",
+   "id": "b813db6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd06a770",
+   "id": "2e850020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64002392",
+   "id": "cc379a28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c3f8cf",
+   "id": "eef6ba71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f23a39b",
+   "id": "939c861a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59aa959e",
+   "id": "c74c381b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659dfc02",
+   "id": "2f248a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddcc8ac9",
+   "id": "2a688f1d",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6abf9d21",
+   "id": "c95cd7f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "526b17e0",
+   "id": "69a32c30",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d44c728",
+   "id": "67addd5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929bd58a",
+   "id": "b8015b5f",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46433d22",
+   "id": "f2ab26f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4facce6",
+   "id": "baa9684d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d090a1",
+   "id": "b04d90c1",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8017f7f4",
+   "id": "f3e8344d",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30e1db15",
+   "id": "c0fa3e72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5866cbab",
+   "id": "9242e0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e5814d4",
+   "id": "5359b8c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e649e92",
+   "id": "ea73957d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56240fd6",
+   "id": "61679650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45dba54",
+   "id": "fd27445a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b83c36c",
+   "id": "d73e40a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d2dfeb4",
+   "id": "be343adc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1dc92d",
+   "id": "5947c87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f333fe54",
+   "id": "738f8534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59fa3232",
+   "id": "5b08df7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3059b87b",
+   "id": "c7d6fa41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7db8d51c",
+   "id": "cbe8e081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4f1e00",
+   "id": "14df40df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47186b98",
+   "id": "0481b3af",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd08120",
+   "id": "fd78611b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19505bfb",
+   "id": "1badf58c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89d1d77",
+   "id": "af3b42b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fec554e",
+   "id": "a5ad752d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cbb81e4",
+   "id": "61ea4ae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5f67723",
+   "id": "8b22a502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f808698c",
+   "id": "46a2cc8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f4ad31f",
+   "id": "442011db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a587ac2",
+   "id": "59970e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753a1525",
+   "id": "ff1649b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3afc84c9",
+   "id": "ccbc538f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b24fc127",
+   "id": "0f24d38d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f2746d",
+   "id": "4df7f94c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,33 +1515,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "807e715f",
+   "id": "39417d31",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "\n",
-    "model = MultiOutputRegressor(\n",
-    "    estimator=HistGradientBoostingRegressor(random_state=0), n_jobs=-1\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "523339fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "multioutput_predictions = features_with_dropped_cols.skb.apply(\n",
-    "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
+    "    MultiOutputRegressor(\n",
+    "        estimator=HistGradientBoostingRegressor(random_state=0), n_jobs=-1\n",
+    "    ),\n",
+    "    y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y(),\n",
     ").skb.set_name(\"multioutput_gbdt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c03011",
+   "id": "3b3fea86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55afc82",
+   "id": "0313ab5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd2e19e",
+   "id": "59a37e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51694a1",
+   "id": "55998705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91f8c507",
+   "id": "c2dce7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d69bfb",
+   "id": "a13b3820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7234cf08",
+   "id": "988cceb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05721da1",
+   "id": "160e0208",
    "metadata": {},
    "outputs": [],
    "source": []
